# reloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  reloc.c  reloc.h  reloc_error.c  version.h.in
.github/workflows/: ci.yml
test/: CMakeLists.txt  myassert.h  test_reloc_match.c  test_reloc_read.c  test_reloc_write.c
